seperated auth provider